Added option to rewrite JavaScript files during build.