@@ -12,7 +12,10 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.util.regex.Pattern;
+import java.text.SimpleDateFormat;
+import java.util.Arrays;
+import java.util.Date;
+import java.util.List;
 
 import org.gradle.api.Project;
 import org.gradle.api.plugins.WarPlugin;
@@ -28,40 +31,15 @@ public class TestRepackageWarFileTask {
 	public void testExtractAndRecreateWarFile() throws IOException {
 		File tempOutputFile = File.createTempFile("sample-war-file", ".war");
 		FileUtils.copyFile(SAMPLE_WAR_FILE, tempOutputFile);
-		String originalContents = readZipFileContents(tempOutputFile);
+		String originalContents = readZipFileContents(tempOutputFile,
+				Arrays.asList("combined.js", "-----", " files"));
 		createTask().repackageWAR(tempOutputFile, new WebAppExtension());
-		String outputFileContents = readZipFileContents(tempOutputFile);
+		String outputFileContents = readZipFileContents(tempOutputFile, 
+				Arrays.asList("combined.js", "-----", " files"));
+		String today = new SimpleDateFormat("MM-dd-yyyy HH:mm").format(new Date());
 		
 		assertTrue(tempOutputFile.exists());
-		assertEquals(originalContents, outputFileContents);
-	}
-	
-	@Test
-	public void testReplaceJavaScriptSourceFilesWithCombinedFile() throws IOException {
-		File tempOutputFile = File.createTempFile("sample-combined-file", ".war");
-		tempOutputFile.delete();
-		runShellCommand("zip", "-r", tempOutputFile.getAbsolutePath(), 
-				new File("testbuild/resources").getAbsolutePath());
-		String originalContents = readZipFileContents(tempOutputFile);
-		
-		WebAppExtension config = new WebAppExtension();
-		config.setSourceDir("resources");
-		config.setBuildDir("build");
-		config.setCombinedJavaScriptFileName("combined.js");
-		
-		RepackageWarFileTask task = createTask();
-		task.repackageWAR(tempOutputFile, config);
-		String repackagedContents = readZipFileContents(tempOutputFile);
-		
-		assertTrue(originalContents.contains("lines.html"));
-		assertTrue(originalContents.contains("first.js"));
-		assertTrue(originalContents.contains("second.js"));
-		assertFalse(originalContents.contains("combined.js"));
-		
-		assertTrue(repackagedContents.contains("lines.html"));
-		assertFalse(repackagedContents.contains("first.js"));
-		assertFalse(repackagedContents.contains("second.js"));
-		assertTrue(repackagedContents.contains("combined.js"));
+		assertEquals(originalContents.replaceAll("07-30-2007 \\d+:\\d+", today), outputFileContents);
 	}
 	
 	private Project createProject() {
@@ -77,19 +55,33 @@ public class TestRepackageWarFileTask {
 		return (RepackageWarFileTask) project.getTasks().getByName("repackageWAR");
 	}
 	
-	private String readZipFileContents(File zipFile) throws IOException {
+	private String readZipFileContents(File zipFile, List<String> ignoreLines) throws IOException {
 		if (!zipFile.exists()) {
 			throw new AssertionError("ZIP file does not exist");
 		}
 		
 		String output = runShellCommand("unzip", "-l", zipFile.getAbsolutePath());
-		// Remove the date/time column to be able to compare the result.
-		Pattern dateTimePattern = Pattern.compile("\\d\\d-\\d\\d-\\d\\d \\d\\d[:]\\d\\d");
-		return dateTimePattern.matcher(output).replaceAll("");
+		StringBuilder processed = new StringBuilder();
+		for (String line : output.split("\n")) {
+			if (!lineContains(line, ignoreLines)) {
+				processed.append(line).append("\n");
+			}
+		}
+		return processed.toString();
+	}
+	
+	private boolean lineContains(String line, List<String> ignoreLines) {
+		for (String pattern : ignoreLines) {
+			if (line.contains(pattern)) {
+				return true;
+			}
+		}
+		return false;
 	}
 	
 	private String runShellCommand(String... command) throws IOException {
-		Process process = Runtime.getRuntime().exec(command);
+		ProcessBuilder processBuilder = new ProcessBuilder(command);
+		Process process = processBuilder.start();
 		
 		BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream(), "UTF-8"));
 		StringBuilder buffer = new StringBuilder();
